Makes everything work on Java 11 EA